// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText RichText and loom link in text flag return text with loom iframe 1`] = `
<div
  class="container"
>
  <div
    aria-autocomplete="none"
    aria-readonly="true"
    class="content"
    contenteditable="false"
    data-lexical-editor="true"
    data-testid="rich-text-contenteditable"
    spellcheck="true"
    style="user-select: text; white-space: pre-wrap; word-break: break-word;"
  >
    <p
      class="lexical-rich-editor-paragraph"
      dir="ltr"
    >
      <span
        data-lexical-text="true"
      >
        test1 https://www.loom.com/share/7f68fa7f01e349cab91b0c36168f68c3?t=1
      </span>
    </p>
  </div>
</div>
`;

exports[`RichText RichText and youtube and loom link in text flag return text with youtube and loom iframe 1`] = `
<div
  class="container"
>
  <div
    aria-autocomplete="none"
    aria-readonly="true"
    class="content"
    contenteditable="false"
    data-lexical-editor="true"
    data-testid="rich-text-contenteditable"
    spellcheck="true"
    style="user-select: text; white-space: pre-wrap; word-break: break-word;"
  >
    <p
      class="lexical-rich-editor-paragraph"
      dir="ltr"
    >
      <span
        data-lexical-text="true"
      >
        test1 https://www.loom.com/share/7f68fa7f01e349cab91b0c36168f68c3?t=1 https://www.youtube.com/watch?v=jNQXAC9IVRw
      </span>
    </p>
  </div>
</div>
`;

exports[`RichText RichText and youtube in text flag return text with youtube iframe 1`] = `
<div
  class="container"
>
  <div
    aria-autocomplete="none"
    aria-readonly="true"
    class="content"
    contenteditable="false"
    data-lexical-editor="true"
    data-testid="rich-text-contenteditable"
    spellcheck="true"
    style="user-select: text; white-space: pre-wrap; word-break: break-word;"
  >
    <p
      class="lexical-rich-editor-paragraph"
      dir="ltr"
    >
      <span
        data-lexical-text="true"
      >
        test1 https://www.youtube.com/watch?v=jNQXAC9IVRw
      </span>
    </p>
  </div>
</div>
`;

exports[`RichText renders correct html for mentions and links 1`] = `
<div
  class="container"
>
  <div
    aria-autocomplete="none"
    aria-readonly="true"
    class="content"
    contenteditable="false"
    data-lexical-editor="true"
    data-testid="rich-text-contenteditable"
    spellcheck="true"
    style="user-select: text; white-space: pre-wrap; word-break: break-word;"
  >
    <p
      class="lexical-rich-editor-paragraph"
      dir="ltr"
    >
      <span
        data-lexical-text="true"
      >
        Hello, 
      </span>
      <span
        contenteditable="false"
        data-lexical-decorator="true"
      >
        <span
          class="lexical-rich-editor-mention"
        >
          @Jyoti Puri
        </span>
      </span>
      <span
        data-lexical-text="true"
      >
         , look here: link: http://pneumatic.app/
      </span>
    </p>
  </div>
</div>
`;

exports[`RichText renders correct html for plain text 1`] = `
<div
  class="container"
>
  <div
    aria-autocomplete="none"
    aria-readonly="true"
    class="content"
    contenteditable="false"
    data-lexical-editor="true"
    data-testid="rich-text-contenteditable"
    spellcheck="true"
    style="user-select: text; white-space: pre-wrap; word-break: break-word;"
  >
    <p
      class="lexical-rich-editor-paragraph"
      dir="ltr"
    >
      <span
        data-lexical-text="true"
      >
        Some plain text
      </span>
    </p>
  </div>
</div>
`;
